--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-## Welcome my Powershell Blog
+<html>
 
-Here you will find random ramblings about my daily Powershell voyages. 
+<head>
+  <title>Welcome my Powershell Blog</title>
+</head>
+
+<body>
+<p>Here you will find random ramblings about my daily Powershell voyages.</p> 
 
 
 <ul class="posts">
@@ -8,3 +13,4 @@ Here you will find random ramblings about my daily Powershell voyages.
           <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
       </ul>
+</body>
