--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
-<!DOCTYPE HTML>
-<html>
+---
+title: Instant Automation
+---
 
-<head>
-  <title>Welcome my Powershell Blog</title>
-</head>
-
-<body>
-
-  Here you will find random ramblings about my daily Powershell voyages.
-
-  <ul>
+<div id="home">
+  <h1>Blog Posts</h1>
+  <ul class="posts">
     {% for post in site.posts %}
     <li>
+      <span>{{ post.date | date_to_string }}</span> &raquo;
       <a href="{{ post.url }}">{{ post.title }}</a>
     </li>
     {% endfor %}
   </ul>
-</body>
+</div>
